<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_weather_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CurrentWeatherFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/current_weather_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vertical_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@id/tv_location_name"
                    app:layout_constraintRight_toLeftOf="@id/tv_location_name"
                    app:layout_constraintTop_toTopOf="@id/tv_location_name" />

                <TextView
                    android:id="@+id/tv_location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:textSize="32sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Location: " />

                <TextView
                    android:id="@+id/tv_updated_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@id/temperature_divider"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Updated time" />

                <TextView
                    android:id="@+id/tv_current_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="96dp"
                    android:text="@string/temperature_string"
                    android:textSize="48sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="CurTemp" />

                <TextView
                    android:id="@+id/tv_min_max_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/min_max_temperature_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_current_temperature"
                    tools:text="MinMaxTemp" />

                <TextView
                    android:id="@+id/tv_feels_like_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/temperature_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_min_max_temperature"
                    tools:text="Feels like" />

                <TextView
                    android:id="@+id/tv_weather_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_feels_like_temperature"
                    tools:text="Description" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/temperature_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_weather_description" />

                <TextView
                    android:id="@+id/tv_air_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/air_pressure_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@id/temperature_divider"
                    tools:text="AirPressure" />

                <TextView
                    android:id="@+id/tv_air_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/percentage_string"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/temperature_divider"
                    tools:text="AirHumidity" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/air_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_air_pressure" />

                <TextView
                    android:id="@+id/tv_wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/degrees_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@id/air_divider"
                    tools:text="WindDirection" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/kph_string"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/air_divider"
                    tools:text="WindSpeed" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/wind_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_wind_direction" />

                <TextView
                    android:id="@+id/tv_clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/percentage_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@id/wind_divider"
                    tools:text="Clouds" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:text="@string/meters_string"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/wind_divider"
                    tools:text="Visibility" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/visibility_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_clouds" />


                <TextView
                    android:id="@+id/tv_sunrise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@id/vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@id/visibility_divider"
                    tools:text="Sunrise time" />

                <TextView
                    android:id="@+id/tv_sunset_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/visibility_divider"
                    tools:text="Sunset time" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:padding="128dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>